# scientia

./: .dockerignore  .gitignore  COMMERCIAL_LICENSE.md  LICENSE  README.md  docker-compose.yaml  pyproject.toml
deployment/: Dockerfile  docker-compose.yaml  install.sh  wait-for-db.sh
docs/: technical_requirements.md
scripts/: embeddings.py  embeddings_own.py  getembeddings.py  getembeddings_own.py  langchain_exp.py  langchain_exp2.py  langchain_exp_deepseek.py  langchain_exp_deepseek2.py
src/app/: main.py  test_db.py
src/app/api/: main.py
src/app/bot/: main.py
src/app/db/: __init__.py  auth.py  base.py  config.py  init_db.py
src/app/models/: __init__.py  auth_methods.py  concepts.py  domains.py  registration_requests.py  retention_log.py  user_domains.py  user_knowledge.py  user_profile.py  users.py
src/app/repositories/: __init__.py  auth_method_repository.py  base.py  concept_repository.py  domain_repository.py  profile_repository.py  registration_request_repository.py  retention_log_repository.py  user_domain_repository.py  user_knowledge_repository.py  user_repository.py
src/app/services/: auth.py  email.py  nlp_loader.py  prompt_generator.py  spaced_repetition.py  text_processor.py
src/app/services/agents/: base.py  code_agent.py  count_knowledges_agent.py  search_agent.py  tools.py
src/app/services/embeddings/: openai_provider.py  providers.py
src/app/services/graph/: memory_graph.py
src/app/services/langchain/: chains.py  graph.py
src/app/services/quiz/: evaluator.py  generator.py
src/app/services/weaviate/: client.py  repository.py  schemas.py  utils.py
src/app/settings/: __init__.py
src/app/utils/: text.py
src/vector_db/: client.py  schema.py  schema_settings.json
tests/: test_weaviate.py
